<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/nav_fav" />

    </group>

    <item android:title="@string/nav_account">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_supervised_user_circle_24"
                android:title="@string/nav_profile" />

            <item
                android:id="@+id/nav_pass"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/nav_chancePass" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/nav_logout" />

        </menu>
    </item>
</menu>