<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:contentScrim="@color/scrim">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">
                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/bannerViewPager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tab_indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            app:tabBackground="@drawable/indicator_select"
                            app:tabIndicatorHeight="0dp" />
                    </RelativeLayout>
                </LinearLayout>
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_main"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/background"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/logo"/>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tabBackground="@color/background"
                        app:tabIndicator="@color/white"
                        app:tabSelectedTextColor="@color/white"
                        app:tabTextColor="#989696">

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabHome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabManga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/manga" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabNovel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/novel" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/tabAudio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/audio" />
                    </com.google.android.material.tabs.TabLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layour"
        app:menu="@menu/menu_nav" />

</androidx.drawerlayout.widget.DrawerLayout>